<resources>

    <string name="app_name">PocketMon</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="app_launcher_text">Pocket Monsters</string>
    
    <!-- New Account / Login -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_register">Login/Register</string>
    <string name="main_menu">Main Menu</string>
    <string name="game">Game</string>
    <string name="game_map">Game Map</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="waiting_room">Waiting Room</string>
    <string name="profile">Profile</string>
    <string name="deck">Deck</string>
    <string name="settings">Settings</string>
    
    <!-- Waiting Room -->
    <string name="game_name">Game Name</string>
    <string name="sit">Sit</string>
    <string name="p1">P1</string>
    <string name="p2">P2</string>
    <string name="ready">Ready</string>
    <string name="refresh">Refresh</string>
    <string name="create">Create</string>
    <string name="quickplay">Quickplay</string>
    
    
</resources>