<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/block"
    android:background="@android:color/background_light"
    android:orientation="horizontal"
    android:weightSum="4" >

    <TextView
        android:id="@+id/game_name_textView"
        style="@style/wrap"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:text="@string/game_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_large" />

    <RelativeLayout
        style="@style/wrap"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/p1_textView"
            style="@style/wrap"
            android:text="@string/p1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_large" />
	
        <Button
            android:id="@+id/p1_sit_button"
            style="@style/wrap"
            android:layout_below="@id/p1_textView"
            android:text="@string/sit"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_large" />
        
        
        <TextView
            android:id="@+id/p1_ready_textView"
            style="@style/wrap"
            android:layout_below="@id/p1_textView"
            android:text="@string/ready"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/text_large"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/wrap"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/p2_textView"
            style="@style/wrap"
            android:text="@string/p2"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_large" />

        <Button
            android:id="@+id/p2_sit_button"
            style="@style/wrap"
            android:layout_below="@id/p2_textView"
            android:text="@string/sit"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_large" />
        
        <TextView
            android:id="@+id/p2_ready_textView"
            style="@style/wrap"
            android:layout_below="@id/p2_textView"
            android:text="@string/ready"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/text_large" 
            android:visibility="invisible" />
        
    </RelativeLayout>

</LinearLayout>