<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/block"
    android:orientation="vertical" >

    <!--
    <View 
        android:id="@+id/waiting_room_divider"
        style="@style/divider"
        android:layout_margin="@dimen/spacing_small" />
    -->

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/refresh" />

    <ListView
        android:id="@+id/waiting_room_listView"
        style="@style/block"
        android:layout_alignParentTop="true"
        android:layout_above="@id/refresh_button" >
    </ListView>

    <Button
        android:id="@+id/create_button"
		style="@style/wrap"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/refresh_button"
        android:text="@string/create" />

    <Button
        android:id="@+id/quickplay_button"
        style="@style/wrap"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/create_button"
        android:text="@string/quickplay" />

</RelativeLayout>